<resources>
    <string name="app_name">Cibus</string>
    <string name="title">Welcome to Cibus</string>
    <string name="hint1">Username</string>
    <string name="hint2">Password</string>
    <string name="forgetbtn">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="title2">Registration Form</string>
    <string name="Phone">Phone</string>
    <string name="Address">Street Name</string>
    <string name="strNum">Street Number</string>
    <string name="prov">Province</string>
    <string name="city">City</string>
    <string name="zip">Zip code</string>
    <string name="Registerbtn">Register</string>
    <string name="title3">Reset Password</string>
    <string name="ResetInfo">Enter the details of your account with a new password to reset it. Make sure the information matches the one of the account</string>
    <string name="Email">Email</string>
    <string name="Code">Code</string>
    <string name="NewPass">New Password</string>
    <string name="sendcode">Send code</string>
    <string name="confirmaddrs">Confirm delivery Address</string>
    <string name="imgdes">An image</string>
    <string name="order">Order</string>
    <string name="title4">Order History</string>
    <string name="title5">Your order</string>
    <string name="title6">Promotion</string>
    <string name="gopay">Proceed to Payment</string>
    <string name="hint3">Additional comments</string>
    <string name="Paymentinfo">Payment Information</string>
    <string name="hint4">Card Name</string>
    <string name="hint5">Card Number</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="calc">Calculate Total</string>
    <string name="promodes">Invite a friend to use our app and get 10% off on your next order on us !</string>
    <string name="invitebtn">Invite!</string>
    <string name="title7">Account Information</string>
    <string name="editbtn">Update Personal Info</string>
    <string name="backhome">Go back to Restaurants</string>
    <string name="food1">Double double ($14.99)</string>
    <string name="hint6">0-10</string>
    <string name="wsfood2">Tuscan Chicken Pasta($15.99)</string>
    <string name="wsfood3">Legendary Burger($9.99)</string>
    <string name="menu1">Account Settings</string>
    <string name ="menu2">Order History</string>
    <string name="menu3">Promotion</string>
    <string name="menu4">Logout</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="mdFood1">Big Mac Meal ($8.89)</string>
    <string name="mdFood2">Mighty Angus Original Meal ($10.29)</string>
    <string name="mdFood3">Quarter Pounder with Cheese Meal ($8.89)</string>
    <string name="mdFood4">McChicken Meal ($8.69)</string>
    <string name="mdFood5">Chicken McNuggets Meal ($10.29)</string>
    <string name="mdFood6">Egg McMuffin Meal ($5.69)</string>
    <string name="mdFood7">Baked Apple Pie ($1.19)</string>
    <string name="subFood1">Rotisserie Chicken - 6\" ($5.25)</string>
    <string name="subFood2">Carved Turkey - 6\" ($5.10)</string>
    <string name="subFood3">Roast Beef - 6\" ($5.25)</string>
    <string name="subFood4">Subway Club - 6\" ($4.95)</string>
    <string name="subFood5">Oven Roasted Chicken - 6\" ($5.25)</string>
    <string name="subFood6">Turkey Breast - 6\" ($4.65)</string>
    <string name="subFood7">Black Forest Ham - 6\" ($4.50)</string>
    <string name="phFood1">Pepperoni Lover\'s  ($11.99)</string>
    <string name="phFood2">Meat Lover’s ($11.99)</string>
    <string name="phFood3">Ultimate Cheese Lover’s ($11.99)</string>
    <string name="phFood4">Veggie Lover’s ($11.99)</string>
    <string name="phFood5">Supreme Pizza ($11.99)</string>
    <string name="phFood6">BBQ Lover’s ($11.99)</string>
    <string name="phFood7">Chicken Supreme ($11.99)</string>
    <string name="kfcFood1">2 Pc. Chicken – Combo ($5.99)</string>
    <string name="kfcFood2">Doublicious Sandwich ($5.49)</string>
    <string name="kfcFood3">Popcorn Nuggets ($5.49)</string>
    <string name="kfcFood4">2 Chicken Littles ($5.29)</string>
    <string name="kfcFood5">Chicken Tenders ($6.99)</string>
    <string name="kfcFood6">Tailgate Meal ($29.99)</string>
    <string name="kfcFood7">Mashed Potatoes ($1.99)</string>
    <string name="domFood1">America’s Favorite Feast ($11.99)</string>
    <string name="domFood2">Bacon Cheeseburger Feast ($11.99)</string>
    <string name="domFood3">Deluxe Feast ($11.99)</string>
    <string name="domFood4">ExtravaganZZa Feast ($11.99)</string>
    <string name="domFood5">MeatZZa Feast ($11.99)</string>
    <string name="domFood6">Ultimate Pepperoni Feast ($11.99)</string>
    <string name="domFood7">Wings ($10.99)</string>
    <string name="bpFood1">Pork Back Ribs ($19.99)</string>
    <string name="bpFood2">Chicken Parmesan ($20.49)</string>
    <string name="bpFood3">Ribber-Winger Combo ($24.99)</string>
    <string name="bpFood4">Chicken Wrap ($15.49)</string>
    <string name="bpFood5">Boston Brute ($13.99)</string>
    <string name="bpFood6">The Dig Dipper ($15.49)</string>
    <string name="bpFood7">NY Steak Sandwich ($15.49)</string>
    <string name="wsFood4">The WS Club Combo ($15.49)</string>
    <string name="wsFood5">Shrimp Sandwich Combo ($14.49)</string>
    <string name="wsFood6">Nat\'s Beef Dip Combo ($15.49)</string>
    <string name="wsFood7">Dippin\' with Caesar ($13.99)</string>
</resources>
