<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dominos"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="261dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="182dp"
        tools:text="@string/domFood2" />

    <EditText
        android:id="@+id/baconFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="177dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="341dp"
        tools:text="@string/domFood5" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="289dp"
        tools:text="@string/domFood4" />

    <EditText
        android:id="@+id/extraFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="393dp"
        tools:text="@string/domFood6" />

    <EditText
        android:id="@+id/americanFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/meatzzaFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="336dp" />

    <EditText
        android:id="@+id/deluxeFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="258dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp"
        tools:text="@string/domFood3" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="253dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp"
        tools:text="@string/domFood1" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp"
        tools:text="@string/domFood7" />

    <EditText
        android:id="@+id/ultimateFeast"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="388dp" />

    <EditText
        android:id="@+id/wings"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="442dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="137dp"
        android:layout_height="113dp"
        android:contentDescription="@string/imgdes"
        app:srcCompat="@drawable/dominos"
        tools:layout_editor_absoluteX="22dp" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="33dp" />
</android.support.constraint.ConstraintLayout>