<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Boston">

    <TextView
        android:id="@+id/textView31"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="182dp"
        tools:text="@string/bpFood2" />

    <EditText
        android:id="@+id/chickenParmesan"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="177dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="341dp"
        tools:text="@string/bpFood5" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="289dp"
        tools:text="@string/bpFood4" />

    <EditText
        android:id="@+id/chickenWrap"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="284dp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="393dp"
        tools:text="@string/bpFood6" />

    <EditText
        android:id="@+id/porkRibs"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="127dp" />

    <EditText
        android:id="@+id/bostonBrute"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="336dp" />

    <EditText
        android:id="@+id/ribberCombo"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="258dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp"
        tools:text="@string/bpFood3" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp"
        tools:text="@string/bpFood1" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:text="@string/mdFood1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp"
        tools:text="@string/bpFood7" />

    <EditText
        android:id="@+id/digDipper"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="388dp" />

    <EditText
        android:id="@+id/NYsteak"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint6"
        android:inputType="number"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="442dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="121dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgdes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boston" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>